--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@google-cloud/pubsub": "^1.5.0"
+    "@google-cloud/bigtable": "^2.3.2",
+    "@google-cloud/pubsub": "^1.5.0",
+    "@google-cloud/storage": "^4.3.2",
+    "memjs": "^1.2.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
