--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "NODE_ENV=dev node app.js"
   },
   "dependencies": {
     "@google-cloud/bigtable": "^2.3.2",
     "@google-cloud/pubsub": "^1.5.0",
     "@google-cloud/storage": "^4.3.2",
+    "axios": "^0.19.2",
     "memjs": "^1.2.2",
+    "moment": "^2.24.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
